Twenty Twenty: Correct heading blocks alignment in editor styles.
This explicitly sets top and bottom margins instead of defining all four sides in shorthand notation.

Props sabernhardt, Lumne.
Fixes #51148.
Built from https://develop.svn.wordpress.org/trunk@49507


git-svn-id: http://core.svn.wordpress.org/trunk@49262 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwenty/assets/css/editor-style-block-rtl.css
+++ b/wp-content/themes/twentytwenty/assets/css/editor-style-block-rtl.css
@@ -246,7 +246,8 @@ Inter variable font. Usage:
 	font-weight: 700;
 	letter-spacing: -0.0415625em;
 	line-height: 1.25;
-	margin: 40px 0 25px;
+	margin-top: 40px;
+	margin-bottom: 25px;
 }
 
 .editor-post-title__block .editor-post-title__input,
